# ACA_Lab2

./: .gitignore  CMakeLists.txt  README.md  main.c  predictors.c
include/: fourcoltwobitbht.h  predictors.h  statemachine.h
src/: fourcoltwobitbht.c.c  framework.c  main.c  predictors.c  statemachine.c
